add create user, get users and searchUser